--- a/index.html
+++ b/index.html
@@ -14,3 +14,23 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>sharvayu's motivational post </title>
+</head>
+<link rel="stylesheet" href="./style.css">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Libre+Baskerville&display=swap" rel="stylesheet">
+<body>
+  <div id="photo"><img id="image" src="./assets/images/dog image.jpg"/>
+  <h1 id="font"><p>late realization</p></h1>
+  <p id="para">When u realise only 5 days are left for the exams</p>
+  </div>
+  
+</body>
+</html>
